tests/fixtures/errors/division_by_zero.lazy
// error: Division by zero
//   --> tests/fixtures/errors/division_by_zero.lazy:11:15
//    |
// 11 | result = 10 / 0
//    |               ^
//
// Cannot divide by zero.
//
// help: Ensure the divisor is not zero before performing division.

result = 10 / 0
result
